App v1.1🔥 fixed overflow

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -21,6 +21,10 @@ h1 {
 	font-weight: bold !important;
 }
 
+/* FIXED OVERFLOW SHOWN BY LOTTIEFILES */
+#main-container{
+	overflow: hidden;
+}
 .section {
 	display: grid !important;
 	place-items: center;
@@ -28,8 +32,8 @@ h1 {
 	min-height: 100vh;
 	margin-left: 100px;
 	margin-right: 100px;
-	overflow-x: hidden;
 }
+/* ----------------------------------- */
 
 .type {
 	width: 100%;
